--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <div class="bottom-right">
     <div class="innerbox-content" >
     <img src=images/placeholder_pic.png> </br> 
-    <li><a href="https://cindytson.github.io/Website-4/">Non-Profit: Adopt Good Karma</a></li> </br>
+    <a href="https://cindytson.github.io/Website-4/">Non-Profit: Adopt Good Karma</a> </br>
     <p3>Description</p3>
   </div>
 </div>
